--- a/dc-metro-map/views/dcmetro.jade
+++ b/dc-metro-map/views/dcmetro.jade
@@ -23,7 +23,7 @@ block content
         div.input
             label(for="checkbox")
             input(type='checkbox', name='filters' onclick='showStations();' value='silver' checked)
-            | Green Line
+            | Silver Line
         div.input
             label(for="checkbox")
             input(type='checkbox', name='filters' onclick='showStations();' value='orange' checked)
